--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,12 @@
 theme: jekyll-theme-slate
+title: ns408.github.io
+description: >- # this means to ignore newlines until "baseurl:"
+  Profile page to display my
+  skills.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+markdown: kramdown
+show_downloads: false
+google_analytics: UA-115540513-1
+#email:
+github: [metadata]
