--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-slate
+theme: minima
 title: ns408.github.io
 description: >- # this means to ignore newlines until "baseurl:"
   Profile page to display my
