dumping linkedin info to keep for historical reason

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: minima
-title: ns408.github.io
+title: About
 description: >- # this means to ignore newlines until "baseurl:"
   (-_-)
 baseurl: "" # the subpath of your site, e.g. /blog
